Fix an unwanted-wrapping-text due to lack of space

--- a/css/sketch.css
+++ b/css/sketch.css
@@ -102,7 +102,7 @@ html {
 
 /*rangeOutput*/
 #rangeOutput {
-    width: 130px;
+    width: 155px;
     margin-left: 5px;
     text-align: center;
 }
